vercel fix try 2

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
     "rewrites": [
         {
-            "source": "/profile/:id",
-            "destination": "index.html"
-        },
-        {
-            "source": "/",
-            "destination": "index.html"
+            "source": "(.*)",
+            "destination": "/index.html"
         }
     ]
 }
